# xpatcher

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  install.sh  pyproject.toml
.claude-plugin/: plugin.json  settings.json
.claude-plugin/agents/: executor.md  explorer.md  gap-detector.md  plan-reviewer.md  planner.md  reviewer.md  simplifier.md  tech-writer.md  tester.md
.claude-plugin/hooks/: post_tool_use.py  pre_tool_use.py  run_hook.sh
.claude-plugin/skills/status/: SKILL.md
docs/: TODO.md  agents.md  architecture-snapshot.md  conventions.md  created-artifacts.md  deployment.md  pipeline-iteration-log.md  pipeline.md  project-map.md  project-overview.md  testing.md  troubleshooting.md  validation-playbook.md
docs/ephemeral/: plan-subagent-refactor.md  test_agent_prefix.sh  test_agent_resume_switch.sh  test_bare_delegation.sh  test_plugin_dir_no_bare.sh  test_subagent_delegation.sh
docs/v2/: v2_execution_plan.md  v2_proposal.txt
src/artifacts/: collector.py  store.py
src/context/: builder.py  contracts.py  diff.py  memory.py  packets.py  prompts.yaml
src/dispatcher/: auth.py  budget.py  command_validation.py  core.py  lanes.py  parallel.py  retry.py  schemas.py  session.py  state.py  tui.py  yaml_utils.py
tests/: test_agent_commands.py  test_agents_json.py  test_artifacts.py  test_auth.py  test_context.py  test_core.py  test_e2e_pipeline.py  test_hooks.py  test_retry.py  test_schemas.py  test_session.py  test_state.py  test_tui.py  test_v2_budget.py  test_v2_contracts.py  test_v2_core.py  test_v2_lanes.py  test_v2_packets.py
(+40 files in other folders)
